unpackaged/main/default/objects/Case/fields/CHECKENABLED__c.field-meta.xml
<CustomField>
    <fullName>CHECKENABLED__c</fullName>
    <label>CHECKENABLED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>111</fullName>
            </value>
            <value>
                <fullName>12312</fullName>
            </value>
            <value>
                <fullName>222</fullName>
            </value>
            <value>
                <fullName>33</fullName>
            </value>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>asdasd</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>d</fullName>
            </value>
            <value>
                <fullName>e</fullName>
            </value>
            <value>
                <fullName>t</fullName>
            </value>
            <value>
                <fullName>tt</fullName>
            </value>
            <value>
                <fullName>v</fullName>
            </value>
            <value>
                <fullName>z</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>