unpackaged/main/default/objects/Case/fields/Custom_PickList__c.field-meta.xml
<CustomField>
    <fullName>Custom_PickList__c</fullName>
    <label>Custom PickList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TestAdditionCustomPickList</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>