unpackaged/main/default/objects/Case/fields/New_Numebr__c.field-meta.xml
<CustomField>
    <fullName>New_Numebr__c</fullName>
    <label>New_Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>