unpackaged/main/default/objects/Case/fields/test_Field__c.field-meta.xml
<CustomField>
    <fullName>test_Field__c</fullName>
    <label>test_Field</label>
    <length>12</length>
    <type>Text</type>
</CustomField>