unpackaged/main/default/objects/Case/recordTypes/spedev.recordType-meta.xml
<RecordType>
    <fullName>spedev</fullName>
    <active>true</active>
    <businessProcess>Support Tester</businessProcess>
    <label>spedev</label>
</RecordType>